remove hyperlinks to trainers page

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h2 class="sc_title sc_title_regular">OUR TRAINERS</h2>
                     <h5 class="sc_title sc_title_regular" style="margin-bottom:1.875em;color:#c2c2c2;">Exercising with
                       a trainer makes your quality of life go through the roof</h5>
-                    <a href="theme_orange/ben.html" title="Ben-Trainer">
+                    <a href="#" title="Ben-Trainer"><!--theme_orange/ben.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/ben_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -139,7 +139,7 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="theme_orange/ben.html" title="Trainer">
+                    </a> <a href="#" title="Trainer"><!--theme_orange/ben.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/melissa_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -153,7 +153,7 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="single-trainer.html" title="Trainer">
+                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/josh_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -167,7 +167,7 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="single-trainer.html" title="Trainer">
+                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/garrett_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -181,7 +181,7 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="single-trainer.html" title="Trainer">
+                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/alana_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -196,7 +196,7 @@
                         </div>
                       </div>
                     </a>
-                    </a> <a href="single-trainer.html" title="Trainer">
+                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/matt3.jpg" class="attachment-category-thumb size-category-thumb"
