add the gallery-two page and fix links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </li>
               <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
               </li>
-              <li class="nav-item"><a href="../theme_orange/gallery.html" class="nav-link" title="Gallery">Gallery</a>
+              <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
               <li class="nav-item"><a href="../theme_orange/pricing.html" class="nav-link" title="Pricing">Pricing</a></li>
@@ -133,7 +133,20 @@
                           <div class="overlay">
                             <div class="overlay-inner text-center">
                               <h5>Benjamin Riddle <br>
-                                <span>Head Coach</span></h5>
+                                <span>Owner/Head Coach</span></h5>
+                              <span class="icon"><img src="../assets/images/trainers/icon-pro5.png" alt="" /></span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="width-20">
+                        <div class="thumbnail-cat">
+                          <div class="bg-cat"><img src="../assets/images/trainers/laura.jpg" class="attachment-category-thumb size-category-thumb"
+                              alt="class2"></div>
+                          <div class="overlay">
+                            <div class="overlay-inner text-center">
+                              <h5>Laura Wood <br>
+                                <span>General Manager</span></h5>
                               <span class="icon"><img src="../assets/images/trainers/icon-pro5.png" alt="" /></span>
                             </div>
                           </div>
@@ -455,7 +468,7 @@
             <ul>
               <li><a href="../index.html" title="Home">Home</a> </li>
               <li><a href="../theme_orange/schedule.html" title="Schedule">Schedule</a> </li>
-              <li><a href="../theme_orange/gallery.html" title="Gallery">Gallery</a> </li>
+              <li><a href="../theme_orange/gallery-two.html" title="Gallery">Gallery</a> </li>
               <li><a href="../theme_orange/trainers.html" title="Trainer">Trainers</a> </li>
             </ul>
           </div>
