--- a/theme_orange/gallery-two.html
+++ b/theme_orange/gallery-two.html
@@ -31,9 +31,24 @@
       <div class="cbp-af-inner">
         <div class="navbar-header">
           <button type="button" title="Toggle Navigation" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="navbar-brand" href="index.html" title="logo"> <img src="../assets/images/logo.png" class="logo" alt="logo"> </a> </div>
+          <a class="navbar-brand" href="../index.html" title="logo"> <img src="../assets/images/logo.png" class="logo" alt="logo"> </a> </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          <!-- change of nav links to match index.html -->
+<ul class="nav navbar-nav">
+  <li class="nav-item active"><a href="../index.html" class="nav-link" title="Home">Home</a>
+  </li>
+  <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
+  </li>
+  <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
+  </li>
+  <li class="nav-item"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
+  <li class="nav-item"><a href="../theme_orange/pricing.html" class="nav-link" title="Pricing">Pricing</a></li>
+  <li class="nav-item"><a href="../theme_orange/page-not-found.html" class="nav-link" title="Store">Store</a></li>
+  <li class="nav-item"><a href="../theme_orange/page-not-found.html" class="nav-link" title="Blog">Blogs</a></li>
+  <li class="nav-item"><a href="../theme_orange/page-not-found.html" class="nav-link" title="Contact">Contact</a>
+  </li>
+</ul>
+          <!-- <ul class="nav navbar-nav">
             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" title="Fitness Theme">Home</a>
               <ul class="dropdown-menu">
                 <li><a href="../theme_orange/index.html" title="Fitness Theme One">Fitness Theme 1</a> </li>
@@ -103,7 +118,7 @@
               </ul>
             </li>
             <li class="nav-item"><a href="contact.html" class="nav-link" title="Contact">Contact</a> </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
@@ -599,38 +614,44 @@
 <div class="clearfix"></div>
 <!-- footer_wrap -->
 <div class="main-footer">
-    <div class="container">
+  <div class="container">
     <div class="row">
       <div class="col-lg-3 col-sm-6">
-        <h6>Fitness Theme</h6>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
+        <h6>Five Rings</h6>
+        <blockquote>
+          <p>"There is timing in everything. Timing in strategy cannot be mastered without a great deal of
+            practice..."</p>
+          <cite>-Miyamoto Musashi</cite>
+        </blockquote>
       </div>
       <div class="col-lg-3 col-sm-6">
         <h6>Quick Links</h6>
         <div class="col-xs-6 no-paddng">
           <ul>
-            <li><a href="index.html" title="Home">Home</a> </li>
-            <li><a href="classes.html" title="Classes">Classes</a> </li>
-            <li><a href="gallery.html" title="Gallery">Gallery</a> </li>
-            <li><a href="trainers" title="Trainer">Trainers</a> </li>
+            <li><a href="../index.html" title="Home">Home</a> </li>
+            <li><a href="../theme_orange/schedule.html" title="Schedule">Schedule</a> </li>
+            <li><a href="../theme_orange/gallery-two.html" title="Gallery">Gallery</a> </li>
+            <li><a href="../theme_orange/trainers.html" title="Trainer">Trainers</a> </li>
           </ul>
         </div>
         <div class="col-xs-6 no-paddng">
           <ul>
-            <li><a href="page-not-found.html" title="Other Pages">Pages</a> </li>
-            <li><a href="store-list-view.html" title="Store">Store</a> </li>
-            <li><a href="blog.html" title="Blogs">Blog</a> </li>
+            <li><a href="../theme_orange/page-not-found.html" title="Other Pages">Pages</a> </li>
+            <!--page-not-found.html-->
+            <li><a href="../theme_orange/page-not-found.html" title="Store">Store</a> </li>
+            <!--store-list-view.html-->
+            <li><a href="../theme_orange/page-not-found.html" title="Blogs">Blog</a> </li>
+            <!--blog.html-->
           </ul>
         </div>
         <div class="clearfix"></div>
       </div>
       <div class="col-lg-3 col-sm-6">
-        <h6>Get in touch</h6>
-        <p >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
-        <p class="address">Moon Street Light Avenue, 14/05 <br>
-          Jupiter, JP 80630</p>
-        <p class="mail"><a href="mailto:contact@srgit.com" title="Get in Touch">contact@srgit.com</a> </p>
-        <p class="phone">00 123 456 78 90</p>
+        <h6>Get in touch!</h6>
+        <p>Come visit us! We are behind the old NoDa Brewing Company</p>
+        <p class="address">421 E. 26th St. Charlotte,<br>North Carolina 28205 </p>
+        <p class="mail"><a href="mailto:5Ringssc@gmail.com" title="Get in Touch">5Ringssc@gmail.com</a> </p>
+        <p class="phone">(910) 581-3667</p>
       </div>
       <div class="col-lg-3 col-sm-6">
         <h6>Pinterest</h6>
@@ -644,13 +665,16 @@
           <div class="clearfix"></div>
         </div>
         <h6>Follow us on</h6>
-        <div class="social-links"><a href="" title="RSS"><i class="fa fa-rss" ></i></a> <a title="Facebook" href=""><i class="fa fa-facebook" ></i></a> <a href="" title="Twitter"><i class="fa fa-twitter" ></i></a> <a href="" title="Instagram"><i class="fa fa-instagram" ></i></a> </div>
+        <div class="social-links"><a href="" title="RSS"><i class="fa fa-rss"></i></a> <a title="Facebook" href="https://www.facebook.com/FiveRingsSC/"><i
+              class="fa fa-facebook"></i></a> <a href="" title="Twitter"><i class="fa fa-twitter"></i></a> <a href="https://www.instagram.com/5ringssc/"
+            title="Instagram"><i class="fa fa-instagram"></i></a> </div>
       </div>
     </div>
     <div class="clearfix"></div>
   </div>
   <div class="footer-bg">
-    <p class="copyright text-center">© 2018 Fitness. All rights reserved. Designed by <a href="http://www.srgit.com/" target="_blank" title="Sunrise Group Of International Technology">Srgit</a> </p>
+    <p class="copyright text-center">© 2018 Five Rings. All rights reserved. Designed by <a href="http://www.alexmurray.design/"
+        target="_blank" title="Alex Murray Designs">AMD</a> </p>
   </div>
 </div>
 <!-- /.footer_wrap -->
