fix links on all pages

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                     <h2 class="sc_title sc_title_regular">OUR TRAINERS</h2>
                     <h5 class="sc_title sc_title_regular" style="margin-bottom:1.875em;color:#c2c2c2;">Exercising with
                       a trainer makes your quality of life go through the roof</h5>
-                    <a href="#" title="Ben-Trainer"><!--theme_orange/ben.html-->
+                    <a href="#" title="Ben-Trainer">
+                      <!--theme_orange/ben.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/ben_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -152,7 +153,8 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer"><!--theme_orange/ben.html-->
+                    </a> <a href="#" title="Trainer">
+                      <!--theme_orange/ben.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/melissa_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -166,7 +168,8 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
+                    </a> <a href="#" title="Trainer">
+                      <!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/josh_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -180,7 +183,8 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
+                    </a> <a href="#" title="Trainer">
+                      <!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/garrett_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -194,7 +198,8 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
+                    </a> <a href="#" title="Trainer">
+                      <!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/alana_profile.jpg" class="attachment-category-thumb size-category-thumb"
@@ -209,7 +214,8 @@
                         </div>
                       </div>
                     </a>
-                    </a> <a href="#" title="Trainer"><!--single-trainer.html-->
+                    </a> <a href="#" title="Trainer">
+                      <!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/matt3.jpg" class="attachment-category-thumb size-category-thumb"
