--- a/theme_orange/schedule.html
+++ b/theme_orange/schedule.html
@@ -32,7 +32,7 @@
               </li>
               <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
               </li>
-              <li class="nav-item"><a href="../theme_orange/gallery.html" class="nav-link" title="Gallery">Gallery</a>
+              <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
               <li class="nav-item"><a href="../theme_orange/pricing.html" class="nav-link" title="Pricing">Pricing</a></li>
@@ -140,7 +140,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
                                             <div class="sc_schedule_tags">Dead Time - Open Gym</div>
@@ -154,7 +154,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
                                             <div class="sc_schedule_tags">Dead Time - Open Gym</div>
@@ -168,7 +168,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_tags">Dead Time - Open Gym</div>
                                           <div class="sc_schedule_time">12.00 pm &ndash; 4.00 pm</div>
@@ -181,7 +181,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_tags">Open Gym/Weightlifting/Fitness Classes</div>
                                           <div class="sc_schedule_time">4.00 pm &ndash; 6.00 pm</div>
@@ -194,7 +194,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
                                             <div class="sc_schedule_tags">Dead Time - Open Gym</div>
@@ -208,7 +208,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-<div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">Five Rings</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_tags">Unstaffed/Full Access Only</div>
                                           <div class="sc_schedule_time">8.00 pm &ndash; 6.00 am</div>
@@ -924,10 +924,10 @@
           <h6>Quick Links</h6>
           <div class="col-xs-6 no-paddng">
             <ul>
-              <li><a href="index.html" title="Home">Home</a> </li>
-              <li><a href="classes.html" title="Classes">Classes</a> </li>
-              <li><a href="gallery.html" title="Gallery">Gallery</a> </li>
-              <li><a href="trainers" title="Trainer">Trainers</a> </li>
+              <li><a href="../index.html" title="Home">Home</a> </li>
+              <li><a href="../theme_orange/schedule.html" title="Schedule">Schedule</a> </li>
+              <li><a href="../theme_orange/gallery-two.html" title="Gallery">Gallery</a> </li>
+              <li><a href="../theme_orange/trainers.html" title="Trainer">Trainers</a> </li>
             </ul>
           </div>
           <div class="col-xs-6 no-paddng">
