--- a/theme_orange/trainers.html
+++ b/theme_orange/trainers.html
@@ -35,7 +35,7 @@
               </li>
               <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
               </li>
-              <li class="nav-item"><a href="../theme_orange/gallery.html" class="nav-link" title="Gallery">Gallery</a>
+              <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
               <li class="nav-item"><a href="../theme_orange/pricing.html" class="nav-link" title="Pricing">Pricing</a></li>
@@ -302,9 +302,9 @@
           <div class="col-xs-6 no-paddng">
             <ul>
               <li><a href="../index.html" title="Home">Home</a> </li>
-              <li><a href="classes.html" title="Classes">Classes</a> </li>
-              <li><a href="gallery.html" title="Gallery">Gallery</a> </li>
-              <li><a href="trainers" title="Trainer">Trainers</a> </li>
+              <li><a href="../theme_orange/schedule.html" title="Schedule">Schedule</a> </li>
+              <li><a href="../theme_orange/gallery-two.html" title="Gallery">Gallery</a> </li>
+              <li><a href="../theme_orange/trainers.html" title="Trainer">Trainers</a> </li>
             </ul>
           </div>
           <div class="col-xs-6 no-paddng">
