disable links to sign up now

--- a/theme_orange/pricing.html
+++ b/theme_orange/pricing.html
@@ -85,7 +85,7 @@
             <p class="option">On-Site, Online Coaching & Remote Coaching</p>
           </li>
           <li>
-            <p><a href="package.html" title="Sign up now">Sign Up Now</a></p>
+            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
           </li>
         </ul>
       </div>
@@ -107,7 +107,7 @@
             <p class="option">1 Day / Week Hands on Coaching</p>
           </li>
           <li>
-            <p><a href="package.html" title="Sign up now">Sign Up Now</a></p>
+            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
           </li>
         </ul>
       </div>
@@ -129,7 +129,7 @@
             <p class="option">10 visits $80</p>
           </li>
           <li>
-            <p><a href="package.html" title="Sign up now">Sign Up Now</a></p>
+            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
           </li>
         </ul>
       </div>
@@ -151,7 +151,7 @@
             <p class="option">1st Member $100, 2nd $80, etc...</p>
           </li>
           <li>
-            <p><a href="package.html" title="Sign up now">Sign Up Now</a></p>
+            <p><a href="#" title="Sign up now">Sign Up Now</a></p>
           </li>
         </ul>
       </div>
