correct items on gallery-two page

--- a/theme_orange/gallery-two.html
+++ b/theme_orange/gallery-two.html
@@ -596,7 +596,8 @@
           <div class="sc_content content_wrap">
             <div class="sc_section bg_tint_none aligncenter">
               <div class="vc_empty_space"><span class="vc_empty_space_inner"></span> </div>
-              <h5 class="sc_title sc_title_regular">Subscribe for our Newsletter</h5>
+<h5 class="sc_title sc_title_regular">Subscribe for our Newsletter - <span style="color:red;">Under
+    Construction!</span></h5>
               <h4 class="sc_title sc_title_regular">All the informations related to future events and programmes right in your email address</h4>
               <form action="/" method="post" id="subsForm">
               <input name="subsemail" id="subsemail" type="text" placeholder="Enter your email address" class="search-css" />
