photos resized, menu active setting, trainers 25% width

--- a/theme_orange/schedule.html
+++ b/theme_orange/schedule.html
@@ -28,9 +28,9 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <!-- ul list from index.html page -->
             <ul class="nav navbar-nav">
-              <li class="nav-item active"><a href="../index.html" class="nav-link" title="Home">Home</a>
+              <li class="nav-item"><a href="../index.html" class="nav-link" title="Home">Home</a>
               </li>
-              <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
+              <li class="nav-item active"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
               </li>
@@ -97,14 +97,10 @@
                 <div class="panel-heading">
                   <!-- tabs -->
                   <ul class="nav nav-tabs">
-                    <li class="nav-item"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a>
-                    </li>
-                    <li class="nav-item"><a href="#tuesday" class="tab-link nav-link" data-toggle="tab">Tuesday</a>
-                    </li>
-                    <li class="nav-item"><a href="#wednesday" class="tab-link nav-link" data-toggle="tab">Wednesday</a>
-                    </li>
-                    <li class="nav-item"><a href="#thursday" class="tab-link nav-link" data-toggle="tab">Thursday</a>
-                    </li>
+                    <li class="nav-item"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a></li>
+                    <li class="nav-item"><a href="#tuesday" class="tab-link nav-link" data-toggle="tab">Tuesday</a></li>
+                    <li class="nav-item"><a href="#wednesday" class="tab-link nav-link" data-toggle="tab">Wednesday</a></li>
+                    <li class="nav-item"><a href="#thursday" class="tab-link nav-link" data-toggle="tab">Thursday</a></li>
                     <li class="nav-item"><a href="#friday" class="tab-link nav-link" data-toggle="tab">Friday</a> </li>
                     <li class="nav-item"><a href="#saturday" class="nav-link" data-toggle="tab">Saturday</a> </li>
                     <li class="nav-item"><a href="#sunday" class="tab-link" data-toggle="tab">Sunday</a> </li>
