--- a/theme_orange/trainers.html
+++ b/theme_orange/trainers.html
@@ -31,13 +31,13 @@
                 alt="logo"> </a> </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="nav-item active"><a href="../index.html" class="nav-link" title="Home">Home</a>
+              <li class="nav-item"><a href="../index.html" class="nav-link" title="Home">Home</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/schedule.html" class="nav-link" title="Schedule">Schedule</a>
               </li>
               <li class="nav-item"><a href="../theme_orange/gallery-two.html" class="nav-link" title="Gallery">Gallery</a>
               </li>
-              <li class="nav-item"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
+              <li class="nav-item active"><a href="../theme_orange/trainers.html" class="nav-link" title="Trainers">Trainers</a></li>
               <li class="nav-item"><a href="../theme_orange/pricing.html" class="nav-link" title="Pricing">Pricing</a></li>
               <li class="nav-item"><a href="../theme_orange/page-not-found.html" class="nav-link" title="Store">Store</a></li>
               <li class="nav-item"><a href="../theme_orange/page-not-found.html" class="nav-link" title="Blog">Blogs</a></li>
