worked on sschedule

--- a/theme_orange/schedule.html
+++ b/theme_orange/schedule.html
@@ -97,13 +97,13 @@
                 <div class="panel-heading">
                   <!-- tabs -->
                   <ul class="nav nav-tabs">
-                    <li class="nav-item"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a></li>
+                    <li class="nav-item" style="margin-left: 1px"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a></li>
                     <li class="nav-item"><a href="#tuesday" class="tab-link nav-link" data-toggle="tab">Tuesday</a></li>
                     <li class="nav-item"><a href="#wednesday" class="tab-link nav-link" data-toggle="tab">Wednesday</a></li>
                     <li class="nav-item"><a href="#thursday" class="tab-link nav-link" data-toggle="tab">Thursday</a></li>
                     <li class="nav-item"><a href="#friday" class="tab-link nav-link" data-toggle="tab">Friday</a> </li>
-                    <li class="nav-item"><a href="#saturday" class="nav-link" data-toggle="tab">Saturday</a> </li>
-                    <li class="nav-item"><a href="#sunday" class="tab-link" data-toggle="tab">Sunday</a> </li>
+                    <li class="nav-item"><a href="#saturday" class="tab-link nav-link" data-toggle="tab">Saturday</a> </li>
+                    <li class="nav-item"><a href="#sunday" class="tab-link nav-link" data-toggle="tab">Sunday</a> </li>
                   </ul>
                   <!-- /tabs -->
                 </div>
@@ -123,10 +123,10 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">6am &ndash; 8am</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Open Gym & Fitness Classes</div>
-                                          <div class="sc_schedule_time">6.00 am &ndash; 8.00 am</div>
+                                          <div class="sc_schedule_tags">Open Gym<br>&<br>Fitness Classes</div>
+                                          <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
                                         </div>
@@ -136,38 +136,38 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
-                                        <div class="sc_schedule_content">
+                                        <div class="sc_schedule_title">8am &ndash; 11am</div>
+                                       <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
-                                            <div class="sc_schedule_tags">Dead Time - Open Gym</div>
-                                            <div class="sc_schedule_time">8.00 am &ndash; 11.00 am</div>
+                                            <div class="sc_schedule_tags">Dead Time <br> Open Gym</div>
+                                            <div class="sc_schedule_time"></div>
                                           </div>
                                           <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
-                                          </div>
-                                        </div>
-                                      </div>
-                                  </td>
-                                  <td>
-                                    <div class="sc_schedule_wrap sc_schedule_wrap-2">
-                                      <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
-                                        <div class="sc_schedule_content">
-                                          <div class="sc_schedule_content">
-                                            <div class="sc_schedule_tags">Dead Time - Open Gym</div>
-                                            <div class="sc_schedule_time">11.00 am &ndash; 12.00 pm</div>
-                                          </div>
-                                          <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
-                                          </div>
+                                          </div> 
                                         </div>
                                       </div>
                                   </td>
                                   <td>
                                     <div class="sc_schedule_wrap">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">11am &ndash; 12pm</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Dead Time - Open Gym</div>
-                                          <div class="sc_schedule_time">12.00 pm &ndash; 4.00 pm</div>
+                                          <div class="sc_schedule_content">
+                                            <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
+                                            <div class="sc_schedule_time"></div>
+                                          </div>
+                                          <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
+                                          </div>
+                                        </div>
+                                      </div>
+                                  </td>
+                                  <td>
+                                    <div class="sc_schedule_wrap_alt">
+                                      <div class="sc_schedule_inner">
+                                        <div class="sc_schedule_title">12pm &ndash; 4pm</div>
+                                        <div class="sc_schedule_content">
+                                          <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
+                                          <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
                                         </div>
@@ -177,10 +177,10 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">4pm &ndash; 6pm</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Open Gym/Weightlifting/Fitness Classes</div>
-                                          <div class="sc_schedule_time">4.00 pm &ndash; 6.00 pm</div>
+                                          <div class="sc_schedule_tags">Open Gym<br>Weightlifting<br>Fitness Classes</div>
+                                          <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
                                         </div>
@@ -190,11 +190,11 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">6pm &ndash; 8pm</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
-                                            <div class="sc_schedule_tags">Dead Time - Open Gym</div>
-                                            <div class="sc_schedule_time">6.00 pm &ndash; 8.00 pm</div>
+                                            <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
+                                            <div class="sc_schedule_time"></div>
                                           </div>
                                           <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
                                           </div>
@@ -204,10 +204,10 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">Five Rings</div>
+                                        <div class="sc_schedule_title">8pm &ndash; 6am</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Unstaffed/Full Access Only</div>
-                                          <div class="sc_schedule_time">8.00 pm &ndash; 6.00 am</div>
+                                          <div class="sc_schedule_tags">Unstaffed<br>Full Access Only</div>
+                                          <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
                                         </div>
