work on schedule

--- a/theme_orange/schedule.html
+++ b/theme_orange/schedule.html
@@ -97,7 +97,7 @@
                 <div class="panel-heading">
                   <!-- tabs -->
                   <ul class="nav nav-tabs">
-                    <li class="nav-item" style="margin-left: 1px"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a></li>
+                    <li class="nav-item"><a href="#monday" class="tab-link nav-link active" data-toggle="tab">Monday</a></li>
                     <li class="nav-item"><a href="#tuesday" class="tab-link nav-link" data-toggle="tab">Tuesday</a></li>
                     <li class="nav-item"><a href="#wednesday" class="tab-link nav-link" data-toggle="tab">Wednesday</a></li>
                     <li class="nav-item"><a href="#thursday" class="tab-link nav-link" data-toggle="tab">Thursday</a></li>
@@ -111,8 +111,8 @@
 
                 <!-- Tab panes -->
 
-                <div class="tab-content">
-                  <div role="tabpanel" class="tab-pane fade in active" id="monday">
+                <div  class="tab-content">
+                  <div  role="tabpanel" class="tab-pane fade in active" id="monday">
                     <div class="wpb_text_column wpb_content_element ">
                       <div class="wpb_wrapper">
                         <div class="schedule responsive_sch">
