updated remote training coach label on main page

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                           <div class="overlay">
                             <div class="overlay-inner text-center">
                               <h5>Matt Saeler <br>
-                                <span>Assistant Coach</span></h5>
+                                <span>Remote Programs Director</span></h5>
                               <span class="icon"><img src="../assets/images/trainers/icon-pro5.png" alt="" /></span>
                             </div>
                           </div>
