updated the schedule times under the schedule tab

--- a/theme_orange/schedule.html
+++ b/theme_orange/schedule.html
@@ -123,9 +123,9 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">6am &ndash; 8am</div>
+                                        <div class="sc_schedule_title">530am &ndash; 630am</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Open Gym<br>&<br>Fitness Classes</div>
+                                          <div class="sc_schedule_tags">Functional Fitness Group Workout</div>
                                           <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
@@ -136,7 +136,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">8am &ndash; 11am</div>
+                                        <div class="sc_schedule_title">630am &ndash; 1100am</div>
                                        <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
                                             <div class="sc_schedule_tags">Dead Time <br> Open Gym</div>
@@ -150,7 +150,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">11am &ndash; 12pm</div>
+                                        <div class="sc_schedule_title">1100am &ndash; 200pm</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
                                             <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
@@ -164,7 +164,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap_alt">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">12pm &ndash; 4pm</div>
+                                        <div class="sc_schedule_title">200pm &ndash; 530pm</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
                                           <div class="sc_schedule_time"></div>
@@ -177,9 +177,9 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">4pm &ndash; 6pm</div>
+                                        <div class="sc_schedule_title">530pm &ndash; 630pm</div>
                                         <div class="sc_schedule_content">
-                                          <div class="sc_schedule_tags">Open Gym<br>Weightlifting<br>Fitness Classes</div>
+                                          <div class="sc_schedule_tags">Functional Fitness Group Workout</div>
                                           <div class="sc_schedule_time"></div>
                                         </div>
                                         <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
@@ -190,10 +190,10 @@
                                   <td>
                                     <div class="sc_schedule_wrap sc_schedule_wrap-2">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">6pm &ndash; 8pm</div>
+                                        <div class="sc_schedule_title">630pm &ndash; 730pm</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_content">
-                                            <div class="sc_schedule_tags">Dead Time<br>Open Gym</div>
+<div class="sc_schedule_tags">Functional Fitness Group Workout</div>
                                             <div class="sc_schedule_time"></div>
                                           </div>
                                           <div class="sc_schedule_button opacity"> <a href="#" title="Register">Register</a>
@@ -204,7 +204,7 @@
                                   <td>
                                     <div class="sc_schedule_wrap active">
                                       <div class="sc_schedule_inner">
-                                        <div class="sc_schedule_title">8pm &ndash; 6am</div>
+                                        <div class="sc_schedule_title">730pm &ndash; 530am</div>
                                         <div class="sc_schedule_content">
                                           <div class="sc_schedule_tags">Unstaffed<br>Full Access Only</div>
                                           <div class="sc_schedule_time"></div>
