updated Matt in trainers html

--- a/theme_orange/trainers.html
+++ b/theme_orange/trainers.html
@@ -212,7 +212,7 @@
                 <div class="tb-teacher-content-inner"> <a href="single-trainer.html">
                     <h4 class="tb-title">Matt Saeler</h4>
                   </a>
-                  <p class="tb-position">Assistant Coach</p>
+                  <p class="tb-position">Remote Programs Director</p>
                   <div class="tb-excerpt">
                     <p> MS Exercise Science: Performance Enhancement & Injury Prevention, BS Athletic Training, USAW -
                       Sports Performance Coach, NASM: Performance Enhancement Specialist, NASE, National Academy of
