--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="width-20">
+                      <!-- <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/laura.jpg" class="attachment-category-thumb size-category-thumb"
                               alt="class2"></div>
@@ -152,10 +152,10 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </a> <a href="#" title="Trainer">
+                      </div> -->
+                    <!-- </a> <a href="#" title="Trainer"> -->
                       <!--theme_orange/ben.html-->
-                      <div class="width-20">
+                      <!-- <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/melissa_profile.jpg" class="attachment-category-thumb size-category-thumb"
                               alt="class2"></div>
@@ -168,7 +168,7 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer">
+                    </a> <a href="#" title="Trainer"> -->
                       <!--single-trainer.html-->
                       <div class="width-20">
                         <div class="thumbnail-cat">
@@ -185,7 +185,7 @@
                       </div>
                     </a> <a href="#" title="Trainer">
                       <!--single-trainer.html-->
-                      <div class="width-20">
+                      <!-- <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/garrett_profile.jpg" class="attachment-category-thumb size-category-thumb"
                               alt="class2"></div>
@@ -198,9 +198,9 @@
                           </div>
                         </div>
                       </div>
-                    </a> <a href="#" title="Trainer">
+                    </a> <a href="#" title="Trainer"> -->
                       <!--single-trainer.html-->
-                      <div class="width-20">
+                      <!-- <div class="width-20">
                         <div class="thumbnail-cat">
                           <div class="bg-cat"><img src="../assets/images/trainers/alana_profile.jpg" class="attachment-category-thumb size-category-thumb"
                               alt="class2"></div>
@@ -212,7 +212,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> -->
                     </a>
                     </a> <a href="#" title="Trainer">
                       <!--single-trainer.html-->
